--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,11 @@
   "rules": {
     "semi": [2, "always"],
     "quotes": ["error", "double"],
+   
+  },
+  "env": {
     "node": true
+   
   }
 }
 
