--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "extends": "standard",
   "rules": {
     "semi": [2, "always"],
-    "quotes": ["error", "double"],
+    "quotes": ["error", "double"]
    
   },
   "env": {
