--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,7 +6,7 @@ jobs:
     steps: #step
 
         - name: Checkout code
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
           with:
             fetch-depth: 0
         - name: Node.js setup
@@ -19,8 +19,9 @@ jobs:
         - name: Linter execution
           uses: github/super-linter@v4
 
-          env:  
-            DEFAULT_BRANCH: main_workflow
+          env: 
+            VALIDATE_ALL_CODEBASE: false 
+            DEFAULT_BRANCH: "nodejs_linter_job"
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             LINTER_RULES_PATH: /
             JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
