--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -10,11 +10,12 @@ jobs:
           with:
             fetch-depth: 0
         - name: Node.js setup
-          uses: actions/setup-node@v2
+          uses: actions/setup-node@v3
           with:
             node-version: '18.13.0'
         - name: Install dependencies
-          run: npm install
+          run: npm ci
+        - run: npm run build
 
         - name: Linter execution
           uses: github/super-linter@v4
