--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,7 +14,7 @@ jobs:
           uses: github/super-linter@v4
 
           env: 
-           
+            VALIDATE_ALL_CODEBASE: false 
             DEFAULT_BRANCH: "nodejs_linter_job"
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             LINTER_RULES_PATH: /
