--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jessica-Reche/githubActions_examples.git"
   },
-  "author": "Jesica",
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "jest": "^27.4.3"},
   "bugs": {
     "url": "https://github.com/Jessica-Reche/githubActions_examples/issues"
   },
