--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,48 +1,45 @@
-name:  main_workflow
+name: main_workflow
 on: [push]
 
 jobs:
   linter-execution: #job
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [10, 12]
+     
     steps: #step
+      - name: Setting node version
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+         
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-        - name: Checkout code
-          uses: actions/checkout@v3
-          with:
-           fetch-depth: 0
-   
+      - name: Linter execution
+        uses: github/super-linter@v4
 
-        - name: Linter execution
-          uses: github/super-linter@v4
-
-          env: 
-            
-            DEFAULT_BRANCH: "nodejs_linter_job"
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            LINTER_RULES_PATH: /
-            JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
-            VALIDATE_JAVASCRIPT_ES: true
+        env:
+          DEFAULT_BRANCH: "nodejs_linter_job"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LINTER_RULES_PATH: /
+          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
+          VALIDATE_JAVASCRIPT_ES: true
 
   test-execution:
     runs-on: ubuntu-latest
     steps:
-        - name: Checkout code
-          uses: actions/checkout@v3
-          with:
-           fetch-depth: 0
-        - name: Test execution
-          run: npm install jest && npm test
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Test execution
+        run: npm install jest && npm test
 
-          env:
-            CI: true
-            DEFAULT_BRANCH: "nodejs_jest_job"
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            
-    
-
-            
-
-
-
-       
- 
+        env:
+          CI: true
+          DEFAULT_BRANCH: "nodejs_jest_job"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
