workflow-node-versions

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,5 +41,5 @@ jobs:
 
         env:
           CI: true
-          DEFAULT_BRANCH: "nodejs_jest_job"
+          DEFAULT_BRANCH: "nodejs_nodeversions_job"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
