--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,19 +6,20 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10, 12]
+        node-version: [10.x, 12.x]
      
     steps: #step
     
          
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - name: Setting node version
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build --if-present
           
 
       - name: Linter execution
