--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,9 +7,8 @@ jobs:
     strategy:
       matrix:
         node: [10, 12]
-     
+
     steps: #step
-     
       - name: Setting node version
         uses: actions/setup-node@v2
         with:
@@ -26,14 +25,14 @@ jobs:
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
           VALIDATE_JAVASCRIPT_ES: true
 
-  test-execution:
+  test-execution: #job
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          
+
       - name: Test execution
         run: npm install jest && npm test
 
@@ -41,3 +40,13 @@ jobs:
           CI: true
           DEFAULT_BRANCH: "nodejs_nodeversions_job"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  environment_test_execution: #job
+    runs-on: ubuntu-latest
+    env:
+     2DAW: " 2DAW"
+    steps:
+     - uses: adeloyedeji/github-actions-hello@v1.0
+       with:
+        who-to-greet: '${{ env.2DAW }}'
+
