--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,6 +49,6 @@ jobs:
     steps:
      - uses: adeloyedeji/github-actions-hello@v1.0
        with:
-         who-to-greet: echo ${{ env.2DAW }}
+         who-to-greet: $2DAW
       
 
