workflow-enviroment-execution

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,7 +47,7 @@ jobs:
      2DAW: "2DAW"
      DEFAULT_BRANCH: "nodejs_environment_job"
     steps:
-     - uses: adeloyedeji/github-actions-hello@v1.0
+     - run: adeloyedeji/github-actions-hello@v1.0
        with:
          who-to-greet: $2DAW
       
