--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,8 +47,9 @@ jobs:
      2DAW: "2DAW"
      DEFAULT_BRANCH: "nodejs_environment_job"
     steps:
-     - run: adeloyedeji/github-actions-hello@v1.0
+     - uses: adeloyedeji/github-actions-hello@v1.0
        with:
-         who-to-greet: $2DAW
+
+         who-to-greet: "Hello ${{ env.2DAW }}"
       
 
