--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,11 +45,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
      2DAW: "2DAW"
-     DEFAULT_BRANCH: "nodejs_environment_job"
+    
     steps:
-     - uses: adeloyedeji/github-actions-hello@v1.0
+     - name: hello
+       uses: adeloyedeji/github-actions-hello@v1.0
        with:
-
          who-to-greet: ${{ env.2DAW }}
-      
+     - run:  " ${{ env.2DAW }}"
 
