--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -44,12 +44,12 @@ jobs:
   environment_test_execution: #job
     runs-on: ubuntu-latest
     env:
-     2DAW: "2DAW"
+     2DAW: 2DAW
     
     steps:
      - name: hello
        uses: adeloyedeji/github-actions-hello@v1.0
        with:
          who-to-greet: ${{ env.2DAW }}
-     - run:  " ${{ env.2DAW }}"
+     - run: " ${{ env.2DAW }}"
 
