workflow-enviroment-execution

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,11 +45,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
      2DAW: 2DAW
+     env_var: ${{ vars.ENV_CONTEXT_VAR }}
     
     steps:
      - name: hello
        uses: adeloyedeji/github-actions-hello@v1.0
        with:
-         who-to-greet: ${{ env.2DAW }}
-     - run: " ${{ env.2DAW }}"
-
+         who-to-greet: " ${{ vars.GREET_NAME }}"
+  
