--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -50,5 +50,5 @@ jobs:
      - name: hello
        uses: adeloyedeji/github-actions-hello@v1.0
        with:
-         who-to-greet: " ${{ toJSON(env.2DAW) }}"
+         who-to-greet: " ${{ toJSON(env) }}"
   
