--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,58 +1,20 @@
-name: main_workflow
-on: [push]
+name: Hi Mascot
+on: push
+env:
+  mascot: Mona
+  super_duper_var: totally_awesome
 
 jobs:
-  linter-execution: #job
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [10, 12]
-
-    steps: #step
-      - name: Setting node version
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Linter execution
-        uses: github/super-linter@v4
-
-        env:
-          DEFAULT_BRANCH: "nodejs_linter_job"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LINTER_RULES_PATH: /
-          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
-          VALIDATE_JAVASCRIPT_ES: true
-
-  test-execution: #job
-    runs-on: ubuntu-latest
+  windows_job:
+    runs-on: windows-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Test execution
-        run: npm install jest && npm test
-
+      - run: echo 'Hi ${{ env.mascot }}'  # Hi Mona
+      - run: echo 'Hi ${{ env.mascot }}'  # Hi Octocat
         env:
-          CI: true
-          DEFAULT_BRANCH: "nodejs_nodeversions_job"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  environment_test_execution: #job
+          mascot: Octocat
+  linux_job:
     runs-on: ubuntu-latest
     env:
-     2DAW: 2DAW
-     DEFAULT_BRANCH: "nodejs_environment_job"
-     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-    
+      mascot: Tux
     steps:
-    # - name: hello
-      #  uses: adeloyedeji/github-actions-hello@v1.0
-      #  with:
-      #    who-to-greet: " ${{ toJSON(env) }}"
-      - run:  ${{ 2DAW }}
-  
+      - run: echo 'Hi ${{ env.mascot }}'  # Hi Tux
