--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -53,6 +53,6 @@ jobs:
      - name: hello
        uses: adeloyedeji/github-actions-hello@v1.0
        with:
-        who-to-greet: echo "$2DAW"
+        who-to-greet: echo '${{ env.2DAW }}'
      
   
