--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,7 +42,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   environment_test_execution: #job
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
      2DAW: 2DAW
      DEFAULT_BRANCH: "nodejs_environment_job"
@@ -53,6 +53,6 @@ jobs:
      - name: hello
        uses: adeloyedeji/github-actions-hello@v1.0
        with:
-        who-to-greet: echo '${{ env.2DAW }}'
+        who-to-greet: echo 'Hi ${{ env.2DAW }}
      
   
