--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -44,15 +44,12 @@ jobs:
   environment_test_execution: #job
     runs-on: windows-latest
     env:
-     2DAW: 2DAW
-     DEFAULT_BRANCH: "nodejs_environment_job"
-     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-    
+      2DAW: 2DAW
+      DEFAULT_BRANCH: "nodejs_environment_job"
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
-     - name: hello
-       uses: adeloyedeji/github-actions-hello@v1.0
-       with:
-        who-to-greet: echo 'Hi ${{ env.2DAW }}
-     
-  
+      - name: hello
+        uses: adeloyedeji/github-actions-hello@v1.0
+        with:
+          who-to-greet: echo 'Hi ${{ env.2 }}'
