workflow-enviroment-execution

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,7 +48,11 @@ jobs:
      super_duper_var: totally_awesome
     
     steps:
-      - run: echo 'Hi ${{ env.DAW }}'  # Hi Mona
+      - name: hello
+        uses: adeloyedeji/github-actions-hello@v1.0
+        with:
+          who-to-greet: '${{ env.DAW }}'
+      #- run: echo 'Hi ${{ env.DAW }}'  # Hi Mona
       
 
     
