--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
+        uses: actions/setup-node@v2
+      
         run: |
           npm install
           npm run build --if-present
