--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -10,9 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install dependencies
-        uses: actions/setup-node@v2
+      - name: Use Node
+        uses: actions/setup-node@v3
       
+      - name: Install dependencies
         run: |
           npm install
           npm run build --if-present
