--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -34,10 +34,10 @@ jobs:
       #Crear cuenta en surge.sh y crear un token y un dominio y usuario
         uses: dswistowski/surge-sh-action@v1 
         with:
- 
+          login: ${{ secrets.SURGE_LOGIN }}
           token: ${{ secrets.SURGE_TOKEN }}
-          email: ${{ secrets.SURGE_EMAIL }}
           domain: ${{ secrets.SURGE_DOMAIN }}
           project: ./build
-          args: --domain ${{ secrets.SURGE_DOMAIN }}.surge.sh
-       
+ 
+      - name: Start web server
+        run: npm install && npm start
