--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -34,10 +34,7 @@ jobs:
       #Crear cuenta en surge.sh y crear un token y un dominio y usuario
         uses: dswistowski/surge-sh-action@v1 
         with:
-          login: ${{ secrets.SURGE_LOGIN }}
+          login: jessikareix20@gmail.com
           token: ${{ secrets.SURGE_TOKEN }}
           domain: ${{ secrets.SURGE_DOMAIN }}
           project: ./build
- 
-      - name: Start web server 
-        run: npm install && npm start
