--- a/.github/workflows/example_workflow.yml
+++ b/.github/workflows/example_workflow.yml
@@ -25,7 +25,10 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-   
+      - name: Node 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       - name: Download build folder
         uses: actions/download-artifact@v3
         with:
