--- a/.github/workflows/send_telegram_workflow.yaml
+++ b/.github/workflows/send_telegram_workflow.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - name: Ejecutar acción personalizada
       id: enviar_mensaje
-      uses: .
+      uses: ./.github/actions/send_telegram_message
       with:
         telegram_token: ${{ secrets.TELEGRAM_TOKEN }}
         telegram_chat_id: ${{ steps.enviar_mensaje.outputs.CHAT_ID }}
