workflow-telegram-bot

--- a/.github/workflows/send_telegram_workflow.yaml
+++ b/.github/workflows/send_telegram_workflow.yaml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Ejecutar acción personalizada
       id: enviar_mensaje
-      uses: ./index.js
+      uses: ./ # Usar una acción en el mismo repositorio
 
       with:
         telegram_token: ${{ secrets.TELEGRAM_TOKEN }}
