--- a/.github/workflows/send_telegram_workflow.yaml
+++ b/.github/workflows/send_telegram_workflow.yaml
@@ -14,6 +14,7 @@ jobs:
 
       with:
          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
   
        
       
