workflow-telegram-bot

--- a/.github/workflows/send_telegram_workflow.yaml
+++ b/.github/workflows/send_telegram_workflow.yaml
@@ -18,7 +18,7 @@ jobs:
   
        
       
- 
-    - name: FINAL_RESULT
-      if: steps.enviar_mensaje.outputs.RESULT == 'Mensaje enviado'
-      run: exit 0 
+
+    - name: Finalizar ejecución
+      if: ${{ steps.enviar_mensaje.outputs.FINAL_RESULT == 'Mensaje enviado' }}
+      run: exit 0
