workflow-telegram-bot

--- a/.github/workflows/send_telegram_workflow.yaml
+++ b/.github/workflows/send_telegram_workflow.yaml
@@ -20,4 +20,15 @@ jobs:
       
     - name: FINAL_RESULT
       run: echo "El resultado es ${{ steps.enviar_mensaje.outputs.FINAL_RESULT }}"
-    - run: exit 0
+    - name: Finalizar
+      uses: actions/github-script@v3
+      with:
+       script: |
+        github.repos.createDispatchEvent({
+        owner: context.repo.owner,
+        repo: context.repo.repo,
+        event_type: "workflow_dispatch",
+        client_payload: {
+          action: "stop"
+        }})
+    
