--- a/.github/workflows/send_telegram_workflow.yaml
+++ b/.github/workflows/send_telegram_workflow.yaml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Ejecutar acción personalizada
       id: enviar_mensaje
-      uses: ./ # Usar una acción en el mismo repositorio
+      uses: ./
 
       with:
          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
