--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "github-actios",
+  "name": "custom-action-meme",
   "version": "1.0.0",
-  "description": "telegram bot",
+  "description": "Agrega un meme al readme dependiendo del resultado de los tests",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/Jessica-Reche/githubActions_examples#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
-    "@vercel/ncc": "^0.36.0",
-    "node-telegram-bot-api": "^0.61.0"
+    "fs": "0.0.1-security",
+    "node-meme": "^1.0.0",
+    "jest": "^27.4.3"
+
   }
 }
