--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/Jessica-Reche/githubActions_examples#readme",
   "dependencies": {
+    "@actions/core": "^1.10.0",
     "fs": "0.0.1-security",
-    "node-meme": "^1.0.0",
-    "jest": "^27.4.3"
-
-  }
+    "jest": "^27.4.3",
+    "meme-generator": "^0.1.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"]
 }
+ 
