--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "homepage": "https://github.com/Jessica-Reche/githubActions_examples#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "canvas": "^2.11.0",
     "fs": "0.0.1-security",
-    "jest": "^27.4.3"
+    "jest": "^27.4.3",
+    "memegen": "^2.0.0"
   }
 }
