--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -6,11 +6,15 @@ jobs:
   ejecutar_tests:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Ejecutar tests
+    - uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14
+    - name: npm install, build and test
       run: |
-        npm install
+        npm ci
+        npm run build
         npm test
   agregar_meme:
     runs-on: ubuntu-latest
