--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -6,16 +6,11 @@ jobs:
   ejecutar_tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - name: npm install, build and test
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Ejecutar tests
       run: |
         npm install
-        npm ci
-        npm run build
         npm test
   agregar_meme:
     runs-on: ubuntu-latest
