--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -8,6 +8,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: 'node16'
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
     - name: Ejecutar tests
       run: |
         npm install
