--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -30,8 +30,8 @@ jobs:
             node index.js
       - name: Commit and push
         run: |
-          git config --global user.email "jessikareix20@gmail.com"
-          git config --global user.name "Jessica-Reche"
+          git config  user.name  Jessica-Reche
+          git config  user.email jessikareix20@gmail.com
           git add .
-          git commit -m "Agregar meme al readme"
+          git commit -m"Agregar meme al readme"
           git push
