workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -25,7 +25,7 @@ jobs:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sables"
           resultado_tests: ${{ job.ejecutar_tests.outputs.resultado_tests }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         
 
           run: |
             npm install
@@ -37,6 +37,8 @@ jobs:
           git add .
           git commit -m"Agregar meme al readme"
           git push
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           
 
           
