--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -36,7 +36,7 @@ jobs:
           git config user.email jessikareix20@gmail.com
           git add .
           git commit -m "Agregar meme al readme"
-          git push -u origin github_actions_readme
+          git push -u origin github_action_readme
 
          
 
