workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -25,7 +25,7 @@ jobs:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sables"
           resultado_tests: ${{ job.ejecutar_tests.outputs.resultado_tests }}
-          TOKEN_GITHUB: ${{ secrets.TOKEN_IDENTIFICACION_GITHUB }}
+          TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
          
 
           run: |
@@ -40,7 +40,7 @@ jobs:
           git config  user.email jessikareix20@gmail.com
           git add .
           git commit -m"Agregar meme al readme"
-          git push https://$TOKEN_IDENTIFICACION_GITHUB@github.com/Jessica-Reche/githubActions_examples.git
+          git push https://$TOKEN_GITHUB_JESSICA@github.com/Jessica-Reche/githubActions_examples.git
 
           
 
