--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -13,8 +13,7 @@ jobs:
           npm install
           npm test
       - name: Guardar resultado de los tests
-     
-        run: echo "resultado_tests=$(npm test)" >> $RESULTADO_TESTS
+        run: echo "result=$(npm test)"
         
   agregar_meme:
     runs-on: ubuntu-latest
@@ -26,7 +25,7 @@ jobs:
         env:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sables"
-          resultado_tests: ${{ job.ejecutar_tests.outputs.RESULTADO_TESTS }}
+          resultado_tests: ${{ steps.ejecutar_tests.outputs.result }}
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
          
 
