--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -13,7 +13,7 @@ jobs:
           npm install
           npm test
       - name: Guardar resultado de los tests
-        run: echo "result=$(npm test)"
+        run: echo "RESULT_TESTS=$(npm test)" >> $GITHUB_ENV
         
   agregar_meme:
     runs-on: ubuntu-latest
@@ -25,7 +25,7 @@ jobs:
         env:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sables"
-          resultado_tests: ${{ steps.ejecutar_tests.outputs.result }}
+          resultado_tests: ${{ env.RESULT_TESTS }}
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
          
 
